[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[flake8]
ignore = E129, E741, E742, W503
max-line-length = 160
builtins = __spec__, basestring, long, unicode, xrange
per-file-ignores =
    ayame/__init__.py: F401, F403
    doc/conf.py: E
    tests/test_core.py: E126, F811
    tests/test_markup.py: E126
    tests/test_util.py: E731
