[metadata]
name = ayame
description = An Apache Wicket-like component based WSGI framework
long_description = file: README.rst
author = Akinori Hattori
author_email = hattya@gmail.com
url = https://github.com/hattya/ayame
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.8
packages = ayame
install_requires =
    Werkzeug
    secure-cookie

[options.package_data]
ayame = */*.html

[sdist]
formats = zip
group = users

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E129, E741, E742
max-line-length = 160
per-file-ignores =
    ayame/__init__.py: F401, F403
    doc/conf.py: E
    tests/test_core.py: F811
    tests/test_util.py: E731
